CMS онлайн бронирования отелей v0.00001

--- a/src/main/webapp/html/main-page.html
+++ b/src/main/webapp/html/main-page.html
@@ -203,9 +203,13 @@
     <div class="header">
         <div class="logo">Онлайн бронирование отелей</div>
         <ul class="nav">
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">О нас</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="/BookingSystem_war">Главная</a></li>
+            <li><a href="/BookingSystem_war/info">О нас</a></li>
+            <li><a href="/BookingSystem_war/contacts">Контакты</a></li>
+            <li><a href="/BookingSystem_war/login">
+<!--                Профиль-->
+                Профиль
+            </a></li>
         </ul>
     </div>
     <div class="banner">
