--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -1,7 +1,117 @@
-<form method="post" action="/BookingSystem_war/login">
-    <label for="login">Login:</label>
-    <input type="text" id="login" name="login"><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br>
-    <input type="submit" value="Login">
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Авторизация</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #F0F8FF;
+        }
+
+        .login-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px;
+        }
+
+        input[type=text], input[type=password] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .login-form {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+            width: 30%;
+        }
+    </style>
+</head>
+<body>
+<div class="login-container">
+    <h2>Авторизация пользователя</h2>
+    <div class="login-form">
+        <label for="username">Логин:</label><br>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="password">Пароль:</label><br>
+        <input type="password" id="password" name="password"><br><br>
+        <button onclick="login()">Войти</button>
+        <br>
+        <button onclick="forgotPassword()">Забыл пароль</button>
+        <br>
+        <button onclick="register()">Зарегистрироваться</button>
+        <br>
+        <p id="error-message"></p> <!-- новый элемент для вывода сообщения об ошибке -->
+    </div>
+</div>
+
+<script>
+    function login() {
+        // Получаем значения полей логина и пароля
+        var username = document.getElementById("username").value;
+        var password = document.getElementById("password").value;
+
+        // Создаем объект FormData для отправки данных формы
+        const formData = new FormData();
+        formData.append('username', username);
+        formData.append('password', password);
+
+        // Отправляем запрос на сервер с использованием метода POST
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "login", true);
+        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+        xhr.send("username=" + username + "&password=" + password);
+
+        xhr.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                var response = this.responseText;
+                console.log(response);
+                window.location.href = "/BookingSystem_war";
+            }
+        };
+    }
+
+    function forgotPassword() {
+        // Здесь можно добавить код для восстановления пароля
+        alert("Функция восстановления пароля");
+    }
+
+    function register() {
+        // Переходим на страницу регистрации
+        window.location.href = "/BookingSystem_war/registration";
+    }
+</script>
+
+<div style="position: fixed; top: 10px; right: 10px;">
+    <button onclick="goToHomePage()">На главную</button>
+</div>
+
+<script>
+    function goToHomePage() {
+        window.location.href = "/BookingSystem_war";
+    }
+</script>
+</body>
+</html>
