Джаваскрипт для Андрюхи

--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -94,7 +94,7 @@
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
                 console.log(this.responseText);
-                window.location.href = "/BookingSystem_war";
+                window.location.href = "/BookingSystem_war/profile";
             }
             if (this.status == 204) {
                 var errorMessage = document.getElementById("error-message");
