Добавил роли: HOTEL, CLIENT, ADMIN

--- a/src/main/webapp/html/profile.html
+++ b/src/main/webapp/html/profile.html
@@ -109,6 +109,9 @@
         <p><label>Пароль:</label>
 <!--            +1 (555) 123-4567-->
         </p>
+        <p><label>Роль:</label>
+<!--            Роль-->
+        </p>
     </div>
     <button class="logout-button" id="logout-button" >Выйти из личного кабинета</button>
 </div>
