--- a/src/main/webapp/html/profile.html
+++ b/src/main/webapp/html/profile.html
@@ -163,7 +163,7 @@
     // Добавляем обработчик события клика
     hotelList.addEventListener("click", function () {
         // Переходим на главную страницу
-        window.location.href = "/BookingSystem_war";
+        window.location.href = "/BookingSystem_war/my-hotels";
     });
 </script>
 </body>
