--- a/src/main/webapp/html/hotel-details.html
+++ b/src/main/webapp/html/hotel-details.html
@@ -144,6 +144,56 @@
         h2 {
             color: #4CAF50;
         }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+        }
+
+        caption {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
+            font-weight: bold;
+        }
+
+        tbody tr:hover {
+            background-color: #f5f5f5;
+        }
+
+        td:last-child {
+            text-align: left;
+        }
+
+        td:last-child::before {
+            content: attr(data-value);
+            display: inline-block;
+            padding: 3px 8px;
+            border-radius: 5px;
+            background-color: #ddd;
+            color: #333;
+            font-size: 12px;
+            font-weight: bold;
+        }
+
+        td:last-child[data-value="Да"]::before {
+            background-color: #4CAF50;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -168,13 +218,18 @@
     </p>
 </div>
 <div class="hotel-amenities">
-    <h3>Удобства</h3>
-    <ul>
-        <li>Бесплатный Wi-Fi</li>
-        <li>Кондиционер</li>
-        <li>Бассейн</li>
-        <li>Фитнес-центр</li>
-    </ul>
+    <table>
+        <caption>Удобства</caption>
+        <thead>
+        <tr>
+            <th>Название</th>
+            <th>Платная услуга (Да/Нет)</th>
+        </tr>
+        </thead>
+        <tbody>
+        // Удобства
+        </tbody>
+    </table>
 </div>
 <div class="hotel-info">
     <h3>Информация об отеле</h3>
