Добавил static Connection Pool для запросов к БД

--- a/src/main/webapp/html/hotel-details.html
+++ b/src/main/webapp/html/hotel-details.html
@@ -234,20 +234,21 @@
 <div class="hotel-info">
     <h3>Информация об отеле</h3>
     <ul>
-        <li><strong>Страна:</strong> США</li>
-        <li><strong>Штат:</strong> Калифорния</li>
-        <li><strong>Город:</strong> Сан-Франциско</li>
-        <li><strong>Адрес:</strong> 123 Main Street</li>
-        <li><strong>Email:</strong> info@example.com</li>
-        <li><strong>Телефон:</strong> +1 (123) 456-7890</li>
-        <li><strong>Веб-сайт:</strong> <a href="https://example.com">https://example.com</a></li>
+        // Данные об отеле
     </ul>
     <h3>Доступность</h3>
-    <ul>
-        <li><strong>Количество свободных номеров:</strong> 5</li>
-        <li><strong>Время заезда:</strong> 14:00</li>
-        <li><strong>Время выезда:</strong> 12:00</li>
-    </ul>
+    <table>
+        <caption>Информация о номерах</caption>
+        <thead>
+        <tr>
+            <th>Тип номера</th>
+            <th>Свободных</th>
+        </tr>
+        </thead>
+        <tbody>
+        // Номера
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
