--- a/src/main/webapp/html/main-page.html
+++ b/src/main/webapp/html/main-page.html
@@ -215,7 +215,7 @@
     </div>
     <div class="search">
         <form action="#">
-            <input type="text" name="destination" placeholder="Направление или название отеля">
+            <input type="text" name="destination" placeholder="Страна или город отеля">
             <input type="date" name="checkin" placeholder="Дата заезда">
             <input type="date" name="checkout" placeholder="Дата выезда">
             <button type="submit">Поиск</button>
