--- a/src/main/webapp/html/profile.html
+++ b/src/main/webapp/html/profile.html
@@ -1,114 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/BookingSystem_war/html/css/profile.css">
     <meta charset="UTF-8">
     <title>Профиль пользователя</title>
-    <style>
-        body {
-            background-color: #f2f2f2;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        h1 {
-            margin: 0;
-        }
-
-        .container {
-            background-color: #fff;
-            border: 1px solid #ccc;
-            box-shadow: 0 0 5px #ccc;
-            margin: 50px auto;
-            max-width: 800px;
-            padding: 20px;
-            text-align: center;
-        }
-
-        label {
-            display: inline-block;
-            font-weight: bold;
-            margin-bottom: 10px;
-            text-align: left;
-            width: 150px;
-        }
-
-        .logout-button {
-            background-color: #ff0000;
-            border: none;
-            color: #fff;
-            cursor: pointer;
-            font-size: 16px;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 20px;
-        }
-
-        .logout-button:hover {
-            background-color: #cc0000;
-        }
-
-        .home-button {
-            background-color: #cc0000;
-            border: none;
-            color: white;
-            cursor: pointer;
-            font-size: 16px;
-            padding: 10px 20px;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
-
-        .home-button:hover {
-            background-color: #930000;
-        }
-
-        .profile-info {
-            margin-bottom: 20px;
-            text-align: left;
-            display: inline-block; /* добавляем */
-        }
-
-        .profile-info p {
-            display: inline-block;
-            margin: 0;
-            padding: 0;
-            vertical-align: top;
-        }
-
-        .profile-info label {
-            display: block;
-            font-weight: normal;
-            margin-bottom: 5px;
-            width: auto;
-        }
-
-        .my-hotels {
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            cursor: pointer;
-            font-size: 16px;
-            padding: 10px 20px;
-            display: inline-block; /* добавляем */
-            vertical-align: top; /* добавляем */
-        }
-
-        .my-hotels:hover {
-            background-color: #3e8e41;
-        }
-
-    </style>
 </head>
 <body>
 <header>
@@ -118,53 +13,49 @@
 <div class="container">
     <div class="profile-info">
         <p><label>Логин:</label>
-<!--            John Doe-->
+            <!--            John Doe-->
         </p>
         <p><label>Электронная почта:</label>
-<!--            john.doe@gmail.com-->
+            <!--            john.doe@gmail.com-->
         </p>
         <p><label>Пароль:</label>
-<!--            +1 (555) 123-4567-->
+            <!--            +1 (555) 123-4567-->
         </p>
         <p><label>Роль:</label>
-<!--            Роль-->
+            <!--            Роль-->
         </p>
-<!--        Кнопка "Мои отели"-->
-<!--        <p><button class="my-hotels" id="my-hotels" >Мои отели</button></p>-->
+        <!--        Кнопка "Мои отели"-->
+        <!--        <p><button class="my-hotels" id="my-hotels" >Мои отели</button></p>-->
+    </div>
+    <div class="user-wallet">
+        <p>
+            <label>
+                Статус кошелька: неизвестен
+            </label>
+            <span id="status"></span>
+        </p>
+        <p>
+            <label>
+                Баланс кошелька: 0 руб.
+            </label>
+            <span id="balance"></span>
+            <button class="replenish-button" id="replenish-button">Пополнить баланс</button>
+        </p>
     </div>
     <br>
-    <button class="logout-button" id="logout-button" >Выйти из личного кабинета</button>
+    <button class="logout-button" id="logout-button">Выйти из личного кабинета</button>
 </div>
-<script>
-    // Получаем кнопку "Выход"
-    var logoutButton = document.getElementById("logout-button");
-
-    // Добавляем обработчик события клика
-    logoutButton.addEventListener("click", function () {
-        // Удаляем куки пользователя
-        document.cookie = "username=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/BookingSystem_war;";
-        document.cookie = "password=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/BookingSystem_war;";
-        // Переходим на страницу логина
-        window.location.href = "/BookingSystem_war/login";
-    });
-
-    // Получаем кнопку "На главную"
-    var homeButton = document.getElementById("home-button");
-
-    // Добавляем обработчик события клика
-    homeButton.addEventListener("click", function () {
-        // Переходим на главную страницу
-        window.location.href = "/BookingSystem_war";
-    });
-
-    // Получаем кнопку "На главную"
-    var hotelList = document.getElementById("my-hotels");
-
-    // Добавляем обработчик события клика
-    hotelList.addEventListener("click", function () {
-        // Переходим на главную страницу
-        window.location.href = "/BookingSystem_war/my-hotels";
-    });
-</script>
 </body>
+<script src="/BookingSystem_war/html/js/cookie.js"></script>
+<script src="/BookingSystem_war/html/js/profile.js"></script>
+<script>
+    var hotelList = document.getElementById("my-hotels");
+    if (hotelList != null) {
+        // Добавляем обработчик события клика
+        hotelList.addEventListener("click", function () {
+            // Переходим на главную страницу
+            window.location.href = "/BookingSystem_war/my-hotels";
+        });
+    }
+</script>
 </html>
