Добавил cache filter и доделал добавление в избранное отелей

--- a/src/main/webapp/html/start-page.html
+++ b/src/main/webapp/html/start-page.html
@@ -8,9 +8,6 @@
 <form id="detailsForm" action="/BookingSystem_war/details" method="get">
     <input type="hidden" name="hotelId" id="hotelIdInput">
 </form>
-<form id="addToFavoriteHotelForm" action="/BookingSystem_war" method="post">
-    <input type="hidden" name="hotelId" id="favoriteHotelId">
-</form>
 <div class="container">
     <div class="header">
         <div class="logo">Онлайн бронирование отелей</div>
@@ -46,5 +43,6 @@
     </div>
 </div>
 <script src="/BookingSystem_war/html/js/start-page.js"></script>
+<script src="/BookingSystem_war/html/js/cookie.js"></script>
 </body>
 </html>
