--- a/src/main/webapp/html/registration.html
+++ b/src/main/webapp/html/registration.html
@@ -3,53 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация нового пользователя</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #F0F8FF;
-        }
-        .registration-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 50px;
-        }
-        input[type=text], input[type=password], input[type=email] {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            box-sizing: border-box;
-            border: 2px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            width: 100%;
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .registration-form {
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            padding: 20px;
-            width: 30%;
-        }
-
-        .error {
-            color: red;
-            text-align: center;
-            margin-top: 20px; /* расстояние сверху от кнопок */
-            margin-bottom: 0; /* убираем отступ снизу */
-        }
-    </style>
+    <link rel="stylesheet" href="/BookingSystem_war/html/css/registration.css">
 </head>
 <body>
 <div class="registration-container">
@@ -67,32 +21,6 @@
         <p class="error" id="error-message"></p>
     </div>
 </div>
-
-<script>
-    function register() {
-        var username = document.getElementById("username").value;
-        var password = document.getElementById("password").value;
-        var confirmPassword = document.getElementById("confirmPassword").value;
-        var email = document.getElementById("email").value;
-
-        var errorMessage = document.getElementById("error-message");
-
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", "registration", true);
-        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-        xhr.send("username=" + username + "&password=" + password + "&email=" + email + "&confirm=" + confirmPassword);
-
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                alert("Регистрация прошла успешно!");
-                window.location.href = "/BookingSystem_war/login";
-                return;
-            }
-            if (this.status == 204) {
-                errorMessage.textContent = "Ошибка регистрации";
-            }
-        };
-    }
-</script>
 </body>
+<script src="/BookingSystem_war/html/js/registration.js"></script>
 </html>
