Пофиксил некоторые баги и добавил фронт часть для изменения роли пользователей в меню админа

--- a/src/main/webapp/html/my-hotels.html
+++ b/src/main/webapp/html/my-hotels.html
@@ -11,5 +11,10 @@
     <!-- Список отелей будет добавлен сюда с помощью JavaScript -->
 </ul>
 </body>
+<script>
+    var hotels = [
+        // Объекты отелей
+    ];
+</script>
 <script src="/BookingSystem_war/html/js/my-hotels.js"></script>
 </html>
