--- a/src/main/webapp/html/profile.html
+++ b/src/main/webapp/html/profile.html
@@ -43,6 +43,7 @@
         </p>
     </div>
     <br>
+<!--    change-role-->
     <button class="logout-button" id="logout-button">Выйти из личного кабинета</button>
 </div>
 </body>
