Добавил фронт часть для "Добавить отель"

--- a/src/main/webapp/html/profile.html
+++ b/src/main/webapp/html/profile.html
@@ -25,7 +25,7 @@
             <!--            Роль-->
         </p>
         <!--        Кнопка "Мои отели"-->
-        <!--        <p><button class="my-hotels" id="my-hotels" >Мои отели</button></p>-->
+        <!--        Добавить отель-->
     </div>
     <div class="user-wallet">
         <p>
@@ -43,10 +43,11 @@
         </p>
     </div>
     <br>
-<!--    change-role-->
+    <!--    change-role-->
     <button class="logout-button" id="logout-button">Выйти из личного кабинета</button>
 </div>
 </body>
 <script src="/BookingSystem_war/html/js/cookie.js"></script>
 <script src="/BookingSystem_war/html/js/profile.js"></script>
+<script src="/BookingSystem_war/html/js/cities.js"></script>
 </html>
